# AOC

2020/01/python/: 01.py  01_bis.py  02.py  02_bis.py
2020/01/rust/: 01  01.rs  01_bis  01_bis.rs  02  02.rs  02_bis  02_bis.rs
2020/02/python/: 01.py  02.py
2020/03/python/: 01.py  02.py
2020/04/python/: 01.py
2020/05/python/: 01.py  02.py
2020/06/python/: 01.py  02.py
2020/07/rust/first/: Cargo.toml
2020/07/rust/first/src/: main.rs
2020/07/rust/second/src/: main.rs
2020/08/rust/first/src/: main.rs
2020/08/rust/second/src/: main.rs
2020/09/rust/first/src/: main.rs
2020/09/rust/second/: Cargo.toml
2020/09/rust/second/src/: main.rs
2020/10/rust/first/src/: main.rs
2020/10/rust/second/src/: main.rs
2020/11/rust/first/: log
2020/11/rust/first/src/: main.rs
2020/11/rust/second/src/: main.rs
2020/12/rust/first/src/: main.rs
2020/12/rust/second/: Cargo.toml
2020/12/rust/second/src/: main.rs
2020/13/rust/first/src/: main.rs
2020/14/rust/first/src/: main.rs
2020/14/rust/second/src/: main.rs
2020/15/rust/first_second/src/: main.rs
2020/16/rust/first/src/: main.rs
2020/17/rust/firstsecond/: Cargo.toml
2020/17/rust/firstsecond/src/: main.rs
2020/18/rust/second/src/: main.rs
2020/19/: input
2020/19/rust/firstsecond/: Cargo.toml
2020/19/rust/firstsecond/src/: main.rs
2020/20/rust/firstsecond/: Cargo.toml
2020/20/rust/firstsecond/src/: main.rs
2020/21/rust/firstsecond/: Cargo.toml  log
2020/22/rust/second/: perf.data
2020/24/rust/second/: Cargo.toml
2020/25/rust/first/: Cargo.toml
(+7 files in other folders)
