[package]
name = "first_second"
version = "0.1.0"
authors = ["Rémy Grünblatt <remy@grunblatt.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"
lazy_static = "1.4.0"
nom = "6.0"
petgraph = "0.5.1"
gamma = "0.8.1"